--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 			<ul class="social">
 				<li><a href="https://github.com/souravkumarnanda" class="fa fa-github fa-2x"></a></li>
 				<li><a href="https://www.fb.com/souravkunanda" class="fa fa-facebook-square fa-2x"></a></li>
-				<li><a href="#" class="fa fa-twitter fa-2x"></a></li>
-				<li><a href="#" class="fa fa-rss fa-2x"></a></li>
-				<li><a href="#" class="fa fa-envelope fa-2x" ></a></li>
+				<li><a href="https://twitter.com/Sourav186" class="fa fa-twitter fa-2x"></a></li>
+				<li><a href="http://souravkumarnanda.blogspot.in/" class="fa fa-rss fa-2x"></a></li>
+				<li><a href="mailto:souravkumarnanda@gmail.com" class="fa fa-envelope fa-2x" ></a></li>
 				<li> <a href="#" class="fa fa-phone fa-2x"></a></li> 
 			</ul>
 			
@@ -224,9 +224,9 @@
 		<ul class="social2">
 			<li><a href="https://github.com/souravkumarnanda" class="fa fa-github fa-2x"></a></li>
 			<li><a href="https://www.fb.com/souravkunanda" class="fa fa-facebook-square fa-2x"></a></li>
-			<li><a href="#" class="fa fa-twitter fa-2x"></a></li>
-			<li><a href="#" class="fa fa-rss fa-2x"></a></li>
-			<li><a href="#" class="fa fa-envelope fa-2x" ></a></li>
+			<li><a href="https://twitter.com/Sourav186" class="fa fa-twitter fa-2x"></a></li>
+			<li><a href="http://souravkumarnanda.blogspot.in/" class="fa fa-rss fa-2x"></a></li>
+			<li><a href="mailto:souravkumarnanda@gmail.com" class="fa fa-envelope fa-2x" ></a></li>
 			<li> <a href="#" class="fa fa-phone fa-2x"></a></li> 
 		</ul>
 	</section>
