--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<li><a href="https://twitter.com/Sourav186" class="fa fa-twitter fa-2x"></a></li>
 				<li><a href="http://souravkumarnanda.blogspot.in/" class="fa fa-rss fa-2x"></a></li>
 				<li><a href="mailto:souravkumarnanda@gmail.com" class="fa fa-envelope fa-2x" ></a></li>
-				<li> <a href="#" class="fa fa-phone fa-2x"></a></li> 
+				<li> <a id="myBtn" class="fa fa-phone fa-2x"></a></li> 
 			</ul>
 			
 
@@ -227,11 +227,80 @@
 			<li><a href="https://twitter.com/Sourav186" class="fa fa-twitter fa-2x"></a></li>
 			<li><a href="http://souravkumarnanda.blogspot.in/" class="fa fa-rss fa-2x"></a></li>
 			<li><a href="mailto:souravkumarnanda@gmail.com" class="fa fa-envelope fa-2x" ></a></li>
-			<li> <a href="#" class="fa fa-phone fa-2x"></a></li> 
+			<li> <a id="myBtn1" class="fa fa-phone fa-2x"></a></li>  
 		</ul>
 	</section>
 
 </body>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>+91- 9124613465 </p>
+  </div>
+
+</div>
+
+
+
+<script type="text/javascript">
+	// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on the button, open the modal 
+btn.onclick = function() {
+    modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
+<script type="text/javascript">
+	// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn1");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on the button, open the modal 
+btn.onclick = function() {
+    modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
+
 
 <footer>
 	<div class="wrap">
